--- a/ingress/k3d-ingress.yaml
+++ b/ingress/k3d-ingress.yaml
@@ -8,7 +8,7 @@ spec:
   rules:
   - http:
       paths:
-      - path: /speak-out
+      - path: /
         pathType: Prefix
         backend:
           service:
