--- a/app/k3d-web-app/src/main/resources/application.yaml
+++ b/app/k3d-web-app/src/main/resources/application.yaml
@@ -13,12 +13,12 @@ spring:
     driver-class-name: com.mysql.jdbc.Driver
   kafka:
     consumer:
-      bootstrap-servers: "172.18.0.3:9092,172.18.0.4:9092,172.18.0.5:9092"
+      bootstrap-servers: my-cluster-kafka-bootstrap.kafka:9092
       auto-offset-reset: earliest
       key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
       value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
     producer:
-      bootstrap-servers: "172.18.0.3:9092,172.18.0.4:9092,172.18.0.5:9092"
+      bootstrap-servers: my-cluster-kafka-bootstrap.kafka:9092
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
       value-serializer: org.apache.kafka.common.serialization.StringSerializer
 
