--- a/app/k3d-web-app/src/main/resources/application.yaml
+++ b/app/k3d-web-app/src/main/resources/application.yaml
@@ -29,7 +29,7 @@ elasticsearch:
   url: elasticsearch-es-http.kube-elastic
   port: 9200
   username: elastic
-  password: eoSKSW289j1202J9GoUct69n
+  password: eoSKSW289j1202J9GoUct69n # change with: kubectl -n kube-elastic get secret elasticsearch-es-elastic-user -o go-template='{{.data.elastic | base64decode}}'
   key-store-file: "/tmp/elastic-certificates.p12"
   cert-file-password: ""
 
