--- a/kafka/02_strimzi_kafka_operator.yml
+++ b/kafka/02_strimzi_kafka_operator.yml
@@ -6,11 +6,11 @@ metadata:
   name: strimzi-cluster-operator-entity-operator-delegation
   labels:
     app: strimzi
-  namespace: kafka
+  namespace: kafka-ns
 subjects:
   - kind: ServiceAccount
     name: strimzi-cluster-operator
-    namespace: kafka
+    namespace: kafka-ns
 roleRef:
   kind: ClusterRole
   name: strimzi-entity-operator
@@ -1105,7 +1105,7 @@ metadata:
 subjects:
   - kind: ServiceAccount
     name: strimzi-cluster-operator
-    namespace: kafka
+    namespace: kafka-ns
 roleRef:
   kind: ClusterRole
   name: strimzi-kafka-broker
@@ -1118,7 +1118,7 @@ metadata:
   name: strimzi-cluster-operator
   labels:
     app: strimzi
-  namespace: kafka
+  namespace: kafka-ns
 data:
   log4j2.properties: >
     name = COConfig
@@ -13359,7 +13359,7 @@ metadata:
 subjects:
   - kind: ServiceAccount
     name: strimzi-cluster-operator
-    namespace: kafka
+    namespace: kafka-ns
 roleRef:
   kind: ClusterRole
   name: strimzi-kafka-client
@@ -17437,7 +17437,7 @@ metadata:
   name: strimzi-cluster-operator
   labels:
     app: strimzi
-  namespace: kafka
+  namespace: kafka-ns
 
 ---
 apiVersion: apps/v1
@@ -17446,7 +17446,7 @@ metadata:
   name: strimzi-cluster-operator
   labels:
     app: strimzi
-  namespace: kafka
+  namespace: kafka-ns
 spec:
   replicas: 1
   selector:
@@ -17566,7 +17566,7 @@ metadata:
 subjects:
   - kind: ServiceAccount
     name: strimzi-cluster-operator
-    namespace: kafka
+    namespace: kafka-ns
 roleRef:
   kind: ClusterRole
   name: strimzi-cluster-operator-global
@@ -17579,11 +17579,11 @@ metadata:
   name: strimzi-cluster-operator
   labels:
     app: strimzi
-  namespace: kafka
+  namespace: kafka-ns
 subjects:
   - kind: ServiceAccount
     name: strimzi-cluster-operator
-    namespace: kafka
+    namespace: kafka-ns
 roleRef:
   kind: ClusterRole
   name: strimzi-cluster-operator-namespaced
