--- a/app/k3d-web-app/src/main/resources/application.yaml
+++ b/app/k3d-web-app/src/main/resources/application.yaml
@@ -7,13 +7,13 @@ spring:
       ddl-auto: update
     show-sql: false
   datasource:
-    url: jdbc:mysql://mysql.mysql:3306/k3d_demo_schema  # url: service-name.namespace:port
+    url: jdbc:mysql://mysql.mysql-ns:3306/k3d_demo_schema  # url: service-name.namespace:port
     username: root
-    password: password
+    password: root
     driver-class-name: com.mysql.jdbc.Driver
   kafka:
     consumer:
-      bootstrap-servers: my-cluster-kafka-bootstrap.kafka:9092
+      bootstrap-servers: my-cluster-kafka-bootstrap.kafka-ns:9092
       auto-offset-reset: earliest
       key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
       value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
@@ -21,7 +21,7 @@ spring:
         auto:
           commit: false
     producer:
-      bootstrap-servers: my-cluster-kafka-bootstrap.kafka:9092
+      bootstrap-servers: my-cluster-kafka-bootstrap.kafka-ns:9092
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
       value-serializer: org.apache.kafka.common.serialization.StringSerializer
 
@@ -36,10 +36,10 @@ camel:
         enabled: false
 
 elasticsearch:
-  url: elasticsearch-es-http.kube-elastic
+  url: elasticsearch-es-http.elasticsearch-ns
   port: 9200
   username: elastic
-  password: eoSKSW289j1202J9GoUct69n # change with: kubectl -n kube-elastic get secret elasticsearch-es-elastic-user -o go-template='{{.data.elastic | base64decode}}'
+  password: FM0xpqu4T7j7Zt7w17744QIR # change with: kubectl -n kube-elastic get secret elasticsearch-es-elastic-user -o go-template='{{.data.elastic | base64decode}}'
   key-store-file: "/tmp/elastic-certificates.p12"
   cert-file-password: ""
   index-name: customer
